Messing with three.js.

--- a/threejs/src/index.html
+++ b/threejs/src/index.html
@@ -19,19 +19,19 @@
     
     <div id="textBox">
       <div>
-        <h1>Text goes in here</h1>
+        <h1>we will control all that you see and here</h1>
       </div>
       <div>
-        <h1>Some more text goes in here</h1>
+        <h1>Some more we will control all that you see and here</h1>
       </div>
       <div>
-        <h1>Text goes in here</h1>
+        <h1>we will control all that you see and here</h1>
       </div>
       <div>
-        <h1>And yet more text goes in here</h1>
+        <h1>And yet more we will control all that you see and here</h1>
       </div>
       <div>
-        <h1>Text goes in here</h1>
+        <h1>we will control all that you see and here</h1>
       </div>
     </div>
 
